--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -60,7 +60,7 @@
 			</dl>
 			
 			<h2>Details</h2>
-			<details open="open">
+			<details open>
 				<summary>Even more details open</summary>
 				<p>Here are even more details about the details.</p>
 			</details>
