replace <b> and <i> to <strong> and <em> (semantic meaning)

--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -15,16 +15,16 @@
 		<header>
 			<a href="http://www.epam.com/"><img src="EPAM_logo.svg" alt="EPAM Logo"></a>
 			<nav>
-				<a href="#html"><b>HTML</b></a>
-				<a href="#list"><b>List</b></a>
-				<a href="#table"><b>Table</b></a>
-				<a href="#text_formats"><b>Text formats</b></a>
-				<a href="#blockquotes"><b>Blockquotes</b></a>
+				<a href="#html"><strong>HTML</strong></a>
+				<a href="#list"><strong>List</strong></a>
+				<a href="#table"><strong>Table</strong></a>
+				<a href="#text_formats"><strong>Text formats</strong></a>
+				<a href="#blockquotes"><strong>Blockquotes</strong></a>
 			</nav>
 		</header>
 		<section>
 			<hr>
-			<h1 id="html"><b>HTML Elements</b></h1>
+			<h1 id="html"><strong>HTML Elements</strong></h1>
 			<hr>
 			<h2>Ordered List</h2>
 			<ul>
@@ -84,7 +84,7 @@
 					<td><a href="#">Test link</a></td>
 				</tr>
 				<tr>
-					<td><i>Italic</i></td>
+					<td><em>Italic</em></td>
 					<td><u>Underline.</u></td>
 					<td><del>Delete</del></td>
 				</tr>
@@ -105,8 +105,8 @@
 
 			<h3>Preformatted Text</h3>
 			<pre>
-<b>Text</b>
-  in a <b>pre</b> element
+<strong>Text</strong>
+  in a <strong>pre</strong> element
 	is displayed in a fixed-width
 font, and it preserves
 both           spaces and
