--- a/homework_01/index.html
+++ b/homework_01/index.html
@@ -26,7 +26,7 @@
 			<hr>
 			<h1 id="html"><strong>HTML Elements</strong></h1>
 			<hr>
-			<h2>Ordered List</h2>
+			<h2 id="list">Ordered List</h2>
 			<ul>
 				<li><h1>Heading 1</h1>
 					<ul>
@@ -50,7 +50,7 @@
 				</li>
 			</ol>
 
-			<h3 id="list">Definition List</h3>	
+			<h3>Definition List</h3>	
 			<dl>
 				<dt>defines terms 1</dt>
 					<dd>description 1</dd>
