--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -26,7 +26,7 @@
     <section id="banner">
         <div class="container">
             <div id="banner-text">
-                <p>Epam helps moneysupermarket deliver engaging digital experiences</p>
+                <h2>Epam helps moneysupermarket deliver engaging digital experiences</h2>
             </div>
         </div>
     </section>
@@ -35,42 +35,42 @@
             <div id="news-block">
                 <a href="#">
                     <div>
-                        <img src="img\news\01.jpg" alt="EPAM Acquires Alliance Global Services">
+                        <img src="img/news/01.jpg" alt="EPAM Acquires Alliance Global Services">
                         <h3>EPAM Acquires Alliance Global Services</h3>
                         <p>Increases Global Product Development Capabilities</p>
                     </div>
                 </a>
                 <a href="#">
                     <div>
-                        <img src="img\news\02.jpg" alt="Q2 2015 Earnings Results Date Announced">
+                        <img src="img/news/02.jpg" alt="Q2 2015 Earnings Results Date Announced">
                         <h3>Q2 2015 Earnings Results Date Announced</h3>
                         <p>Results will be released on August 5, 2015</p>
                     </div>
                 </a>
                 <a href="#">
                     <div>
-                        <img src="img\news\03.jpg" alt="EPAM Acquires NavigationArts">
+                        <img src="img/news/03.jpg" alt="EPAM Acquires NavigationArts">
                         <h3>EPAM Acquires NavigationArts</h3>
                         <p>Expands Digital Engagement Practice</p>
                     </div>
                 </a>
                 <a href="#">
                     <div>
-                        <img src="img\news\04.jpg" alt="Top 25 IT-companies in Ukraine, July 2015">
+                        <img src="img/news/04.jpg" alt="Top 25 IT-companies in Ukraine, July 2015">
                         <h3>Top 25 IT-companies in Ukraine, July 2015</h3>
                         <p>Growth recovery and a new leader</p>
                     </div>
                 </a>
                 <a href="#">
                     <div>
-                        <img src="img\news\05.jpg" alt="German-Ukrainian Business Forum">
+                        <img src="img/news/05.jpg" alt="German-Ukrainian Business Forum">
                         <h3>German-Ukrainian Business Forum</h3>
                         <p>Learn why Ukraine is a perfect sourcing location for IT services</p>
                     </div>
                 </a>
                 <a href="#">
                     <div>
-                        <img src="img\news\06.jpg" alt="User Friendly 2015">
+                        <img src="img/news/06.jpg" alt="User Friendly 2015">
                         <h3>User Friendly 2015</h3>
                         <p>Stop by our Booth #2 to learn more about recent initiatives launched across the UX domain</p>
                     </div>
