--- a/homework_02/index.html
+++ b/homework_02/index.html
@@ -11,10 +11,10 @@
             <section class="slider">
                 <div class="flexslider">
                   <ul class="slides">
-                    <li><a href="#"><img src="images/slides/slide-1.jpg" /></a></li>
-                    <li><a href="#"><img src="images/slides/slide-2.jpg" /></a></li>
-                    <li><a href="#"><img src="images/slides/slide-3.jpg" /></a></li>
-                    <li><a href="#"><img src="images/slides/slide-4.jpg" /></a></li>
+                    <li><a href="#"><img src="img/slides/slide-1.jpg" /></a></li>
+                    <li><a href="#"><img src="img/slides/slide-2.jpg" /></a></li>
+                    <li><a href="#"><img src="img/slides/slide-3.jpg" /></a></li>
+                    <li><a href="#"><img src="img/slides/slide-4.jpg" /></a></li>
                   </ul>
                 </div>
             </section>
@@ -24,28 +24,28 @@
             <section class="categories">
                 <article class="category-unit">
                     <a href="#">
-                        <img src="images/banners/b-1.jpg" alt="Golf" width="221" height="199">
+                        <img src="img/banners/b-1.jpg" alt="Golf" width="221" height="199">
                         <h1>GOLF</h1>
                         <p>Huge discounts golf clothing and equipment from Dunlop, Nike, Reebook and Callaway...</p>
                     </a>
                 </article>
                 <article class="category-unit">
                     <a href="#">
-                        <img src="images/banners/b-2.jpg" width="221" height="199" alt="Outdoors">
+                        <img src="img/banners/b-2.jpg" width="221" height="199" alt="Outdoors">
                         <h1>OUTDOORS</h1>
                         <p>Explore the outdoors for less with Karrimor, Gelert, and Craghoppers...</p>
                     </a>
                 </article>
                 <article class="category-unit">
                     <a href="#">
-                        <img src="images/banners/b-3.jpg" width="221" height="199" alt="Fishing">
+                        <img src="img/banners/b-3.jpg" width="221" height="199" alt="Fishing">
                         <h1>FISHING</h1>
                         <p>Grab a bargain today...</p>
                     </a>
                 </article>
                 <article class="category-unit">
                     <a href="#">
-                        <img src="images/banners/b-4.jpg" width="221" height="199" alt="Fitness">
+                        <img src="img/banners/b-4.jpg" width="221" height="199" alt="Fitness">
                         <h1>FITNESS</h1>
                         <p>Get fighting fit in 2014 with USA Pro, Nike and Lonsdale...</p>
                     </a>
